Fix overflow issues
By wrapping content in a container

--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,9 @@
 }
 
 body{
+    position: absolute;
     height: 100vh;
     width: 100vw;
-    position: absolute;
 }
 
 #page {
@@ -19,6 +19,7 @@ body{
     --shadow: rgba(0,0,0,0.5);
     --main-color: cornflowerblue;
     height: 100%;
+    width: 100%;
 }
 
 #dark-mode:checked ~ #page {
@@ -80,11 +81,9 @@ body{
 header {
     position: relative;
     height: 120px;
-    width: 100%;
 
     background-color: var(--main-color);
     box-shadow: 0 0 10px var(--shadow);
-
 
     display: grid;
     transition: 300ms ease-out;
@@ -98,8 +97,16 @@ header {
 }
 
 main {
+    overflow: auto;
+    height: 100%;
+    width: 100%;
+}
+
+#main-app {
+    padding: 0 40px;
     padding-top: 40px;
-    flex: 1;
+    width: fit-content;
+    flex: 1 0 auto;
 
     display: flex;
     flex-direction: column;
@@ -108,6 +115,7 @@ main {
     background-color: var(--background-color);
     color: var(--text-color);
 
+    overflow: auto;
     transition: all 300ms ease-out;
 }
 
